--- a/EDA_Python_project_Hotel_booking.ipynb
+++ b/EDA_Python_project_Hotel_booking.ipynb
@@ -446,6 +446,30 @@
     {
       "cell_type": "code",
       "source": [
+        "len(hotel_booking_df[hotel_booking_df.duplicated()])"
+      ],
+      "metadata": {
+        "id": "LGB-Zd1tO6og"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Visuliztion duplicate value through count plot.\n",
+        "plt.figure(figsize=(12,8))\n",
+        "sns.countplot(x=hotel_booking_df.duplicated())"
+      ],
+      "metadata": {
+        "id": "TwmR6B_DPARL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "hotel_booking_df.reset_index() # View unique data\n"
       ],
       "metadata": {
@@ -487,6 +511,20 @@
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(12,8))\n",
+        "sns.heatmap(hotel_booking_df.isnull(),cbar='false',cmap='viridis')\n",
+        "plt.xlabel('Name of columns',fontsize=14)\n",
+        "plt.title('place of missing values in column',fontsize=14)"
+      ],
+      "metadata": {
+        "id": "0F8psLhONq1g"
       },
       "execution_count": null,
       "outputs": []
@@ -774,6 +812,18 @@
       ],
       "metadata": {
         "id": "6ugyRRro6dpF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in hotel_booking_df.columns.tolist():\n",
+        "  print(\"Number of unique value is \",hotel_booking_df[i].nunique())"
+      ],
+      "metadata": {
+        "id": "yQn4GLcZPayz"
       },
       "execution_count": null,
       "outputs": []
@@ -1077,6 +1127,18 @@
       ],
       "metadata": {
         "id": "WWlGlqmaWARr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Checking the shape of dataset\n",
+        "hotel_booking_df.shape"
+      ],
+      "metadata": {
+        "id": "ts_8MPBHQcS0"
       },
       "execution_count": null,
       "outputs": []
@@ -1790,10 +1852,7 @@
     {
       "cell_type": "code",
       "source": [
-        "guest_country_wise = pd.DataFrame(hotel_booking_df[['country', 'total_guest']])\n",
-        "guest_country_wise_df = guest_country_wise.groupby(['country'])['total_guest'].sum()\n",
-        "guest_country_wise_df.sort_values(ascending = False, inplace = True)\n",
-        "top_10_country_by_guest = guest_country_wise_df.head(10)"
+        "Group_by_hotel=hotel_booking_df.groupby('hotel')"
       ],
       "metadata": {
         "id": "MV4kxjgMwvGF"
@@ -1804,22 +1863,15 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"\\n\\nPRT = Portugal\\nGBR = Great Britain & Northern Ireland\\nFRA = France\\nESP = Spain\\nDEU = Germany\\nITA = Italy\\nIRL = Ireland\\nBRA = Brazil\\nBEL = Belgium\\nNLD = Netherland\")\n"
+        "Highest_adr=Group_by_hotel['adr'].mean().reset_index()\n",
+        "plt.figure(figsize=(10,8))\n",
+        "plt.xlabel('Hotel type',fontsize=15)\n",
+        "plt.ylabel('ADR',fontsize=15)\n",
+        "plt.title(\"Avg ADR of each hotel type\",fontsize=15)\n",
+        "sns.barplot(x=Highest_adr['hotel'],y=Highest_adr['adr'])"
       ],
       "metadata": {
-        "id": "-NVp-T7d2aZc"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "plt.figure(figsize=(12,6))\n",
-        "sns.barplot(top_10_country_by_guest.index, top_10_country_by_guest).set(title='Top 10 Countries by Guest')\n"
-      ],
-      "metadata": {
-        "id": "bZ0KFuzQ4a_0"
+        "id": "9f9rsGxokfcK"
       },
       "execution_count": null,
       "outputs": []
@@ -1836,7 +1888,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "**To show the average adr of each hotel type in a clear and feasible way.we have used bar chart**"
       ],
       "metadata": {
         "id": "Ob8u6rCTphqO"
@@ -1854,7 +1906,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**City hotel the highest ADR this mean city hotel generates the more revenue than the resort hotel.more the ADRmore the revenue**"
       ],
       "metadata": {
         "id": "mZtgC_hjphqO"
@@ -1873,7 +1925,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**City hotel can do more advertising to get more customer that will ultimately add up to their revenue.City hotel already earning more but positive efforts towards growth wil defibitely adds alot to growth overall revenue.**"
       ],
       "metadata": {
         "id": "ey_0qi68phqO"
@@ -2252,10 +2304,31 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 13 visualization code"
+        "# Chart - 13 visualization code\n",
+        "Booking_by_months_df=hotel_booking_df.groupby(['arrival_date_month'])['hotel'].count().reset_index().rename(columns={'hotel':'counts'})\n",
+        "months=['January','February','March','April','May','June','July','August','September','October','November','December']\n",
+        "Booking_by_months_df['arrival_date_month'] = pd.Categorical(Booking_by_months_df['arrival_date_month'],categories=months,ordered=True)\n",
+        "Booking_by_months_df=Booking_by_months_df.sort_values('arrival_date_month')\n",
+        "\n",
+        "Booking_by_months_df\n"
       ],
       "metadata": {
         "id": "EUfxeq9-p1cl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(22,10))\n",
+        "sns.lineplot(x=Booking_by_months_df['arrival_date_month'],y=Booking_by_months_df['counts'])\n",
+        "plt.title('Number of booking across each month',fontsize=15)\n",
+        "plt.xlabel('Month',fontsize=15)\n",
+        "plt.ylabel('Number of booking',fontsize=15)"
+      ],
+      "metadata": {
+        "id": "HV_6Xnxr9Wli"
       },
       "execution_count": null,
       "outputs": []
@@ -2272,7 +2345,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "**we have picked the line chart here because it helps to show small shifts that may be getting hard to spot in other graph . it helps different periods. they are easy to understand so here we can easily track the change of number of booking with respect to month.**"
       ],
       "metadata": {
         "id": "V22bRsFWp1cl"
@@ -2290,7 +2363,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**we have found that july and august had the most booking .as july and august generally surrounds in and near the summer vacation so summer vacation can be the reason.**"
       ],
       "metadata": {
         "id": "ozQPc2_Ip1cl"
@@ -2309,7 +2382,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**yes this provides good insights that hotels should well prepared for the month of july and august as maximum booking take place in this month.so better the preparation and good approch will definately adds to the growth of hotels.**"
       ],
       "metadata": {
         "id": "GL8l1tdLp1cl"
@@ -2389,7 +2462,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Pair Plot visualization code"
+        "# Pair Plot visualization code\n",
+        "sns.pairplot(hotel_booking_df,hue=\"is_repeated_guest\")\n",
+        "\n"
       ],
       "metadata": {
         "id": "o58-TEIhveiU"
@@ -2409,7 +2484,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "**pair plot is used to understand the best set of features to explain a relationship between two variables or to form the most separated in our data set\n",
+        "thus we have used pair plot to analyse the pattern of data and relationship between the features . its exactly same as the correlation map but here it shows the output in the graphical representation.**"
       ],
       "metadata": {
         "id": "eMmPjTByveiU"
@@ -2427,7 +2503,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**we have found the relationship of is repeated guest with different types of columns so generally this chart reflects the relationship of a particular column with all other columns**"
       ],
       "metadata": {
         "id": "uPQ8RGwHveiV"
